# agentic-stacks

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  agentic_stacks_registry.db  pyproject.toml  wrangler.toml
.claude/projects/-Users-ant-Development-agentic-stacks-agentic-stacks/memory/: MEMORY.md  project_status.md  (+2 more)
.github/workflows/: ci.yml  deploy.yml  publish.yml
.wrangler/cache/: wrangler-account.json
docs/brainstorm/: 01-landscape-synthesis.html  02-approaches.html  03-layer-cake.html  04-consumption-model.html
docs/guides/: authoring-a-stack.md
docs/superpowers/plans/: 2026-03-28-cloudflare-deployment.md  2026-03-28-extends-and-overrides.md  2026-03-28-git-backed-registry.md  2026-03-28-phase1a-thin-runtime.md  2026-03-28-phase1b-astack-cli.md  2026-03-28-phase2a-distribution-cli.md  2026-03-28-phase2b-registry-api.md  2026-03-28-phase2c-website.md  2026-03-28-phase3-mcp-server.md  2026-03-28-simplified-operator-projects.md  2026-03-29-git-backed-registry.md  2026-03-31-stack-factory.md  2026-04-02-common-skills.md
docs/superpowers/specs/: 2026-03-28-agentic-stacks-design.md  2026-03-28-cloudflare-deployment-design.md  2026-03-28-phase2-registry-design.md  2026-03-29-git-backed-registry-design.md  2026-03-31-stack-factory-design.md  2026-04-02-common-skills-design.md
migrations/: 0001_initial.sql
scripts/: generate_formula_data.py  sync_formulas.py
src/: main.py
src/agentic_stacks/: __init__.py  approval.py  config_diff.py  environments.py  lint_rules.py  manifest.py  profiles.py  schema.py  state_store.py
src/agentic_stacks_cli/: __init__.py  api_client.py  config.py  lock.py  oci.py  registry_repo.py
src/agentic_stacks_cli/commands/: create.py  doctor.py  explain.py  init.py  lint.py  list.py  login.py  publish.py  pull.py  remove.py  search.py  update.py  upgrade.py  validate.py
src/agentic_stacks_mcp/: __init__.py  compose.py  server.py
src/astack/: __init__.py
src/astack/commands/: doctor.py
src/registry/: app.py  auth.py  config.py  database.py  db.py  db_d1.py  db_sqlite.py  db_stub.py  local.py  markdown.py  models.py  schemas.py
src/registry/routes/: namespaces.py  stacks.py  web.py
src/registry/static/: style.css
src/registry/templates/: _stack_card.html  base.html  coming_soon.html  home.html  namespace.html  stack_detail.html  stacks.html
src/web/: app.py  config.py  db_formulas.py  formula_data.py  local.py  schemas.py
src/web/routes/: namespaces.py  stacks.py  web.py
src/web/static/: style.css  tailwind.css
src/web/templates/: _search_results.html  about.html  authoring.html  base.html  faq.html  getting_started.html  home.html  inline_styles.css  namespace.html  stack_detail.html  stacks.html
tests/: conftest.py  helpers.py  test_api_client.py  test_approval.py  test_cli_base.py  test_cli_create.py  test_cli_distribution_integration.py  test_cli_doctor.py  test_cli_doctor_operator.py  test_cli_explain.py  test_cli_init.py  test_cli_init_from.py  test_cli_lint.py  test_cli_login.py  test_cli_publish.py  test_cli_pull.py  test_cli_search.py  test_cli_upgrade.py  test_cli_validate.py  test_cli_workflow.py  test_config.py  test_config_diff.py  test_db_abstraction.py  test_environments.py  test_integration.py  test_lock.py  test_manifest.py  test_manifest_project.py  test_mcp_compose_guidance.py  test_mcp_integration.py  test_mcp_server.py  test_oci.py  test_profiles.py  test_registry_auth.py  test_registry_cache.py  test_registry_integration.py  test_registry_models.py  test_registry_namespaces.py  test_registry_rate_limit.py  test_registry_repo.py  (+6 more)
tests/fixtures/parent-stack/: stack.yaml
tests/fixtures/sample-stack/: stack.yaml
worker/: main.py  requirements.txt
(+17 files in other folders)
