[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-stacks"
version = "0.1.0"
description = "Agentic Stacks"
requires-python = ">=3.11"
authors = [
    { name = "Agentic Stacks" },
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]
registry = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "slowapi>=0.1.9",
    "httpx>=0.27",
]

[project.scripts]
agentic-stacks = "agentic_stacks_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_stacks", "src/agentic_stacks_cli", "src/registry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
