[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-stacks"
version = "0.1.0"
description = "Agentic Stacks"
requires-python = ">=3.12"
authors = [
    { name = "Agentic Stacks" },
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "click>=8.1",
    "httpx>=0.27",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "slowapi>=0.1.9",
    "mistune>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
    "pytest-asyncio>=0.24",
]
mcp = [
    "mcp[cli]>=1.0",
]
local = [
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
]

[dependency-groups]
worker = [
    "workers-py",
    "workers-runtime-sdk",
]

[project.scripts]
agentic-stacks = "agentic_stacks_cli:main"
agentic-stacks-mcp = "agentic_stacks_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_stacks", "src/agentic_stacks_cli", "src/registry", "src/agentic_stacks_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
